# BiniApp

./: BiniApp.pro  BiniCateringApp.pro  CMakeLists.txt  CMakeLists.txt.user.4.10-pre1  Dashboard.qml  GridItem.qml  GridNavigation.qml  Map.qml  Mapping.qml  Mission.qml  README.md  SideBar.qml  database.cpp  database.h  databaseName.db  main.cpp  main.qml  qml.qrc  qrc_qml.cpp
database/: databaseName.db
images/: bini.xcf
include/: listmodel.h  moc_predefs.h  qmlmqttclient.h  tablemodel.h
js/: Database.js  FlickableMap.js  LocListHeaderPopup.js  MissionCmd.js  MissionCmdTopMenu.js  MissionListHeaderPopup.js  MissionPlanner.js  componentCreation.js
js/Core/: FlickableMap.js
js/MissionCmd/: MissionCmd.js
js/MissionPlanner/: MissionPlanner.js
js/delegates/: LocListDelegate.js
maps/: map.yaml
qml/: AreaListView.qml  Dashboard.qml  Database.js  GridItem.qml  GridNavigation.qml  Map.qml  Mapping.qml  Mission.qml  MissionCmd.qml  Navigation.qml  SideBar.qml  Sprite.qml  componentCreation.js  main.qml  rough.qml
qml/Core/: FlickableMap.qml  MissionMap.qml
qml/MissionCmd/: MissionCmd.js  MissionCmd.qml  MissionCmdTopMenu.qml
qml/MissionPlanner/: MissionPlanner.js  MissionPlanner.qml  MissionPlannerTopMenu.qml
qml/MockData/: MenuListModel.qml  MissionListModel.qml
qml/Setup/: RobotSetup.qml
qml/Views/: LocListDelegate.qml  MissionListDelegate.qml
qml/delegates/: ActiveMissionListDelegate.qml  ActiveRobotListDelegate.qml  LocListDelegate.qml  LocListHeader.qml  LocListHeaderPopup.qml  MenuListDelegate.qml  MissionListDelegate.qml  MissionListHeader.qml  MissionListHeaderPopup.qml  RobotListDelegate.qml
qml/js/: Database.js  componentCreation.js
qml/sidebar/: MainMenu.qml  SetupSubMenu.qml
src/: database.cpp  listmodel.cpp  main.cpp  moc_database.cpp  moc_listmodel.cpp  qmlmqttclient.cpp  tablemodel.cpp
